# sdl1

./: .gitignore  CMakeLists.txt  graphics_sdl.cpp  graphics_sdl.h  main.cpp  makefile  sdl2.sln  sdl2.vcxproj
.github/workflows/: ci.yml
